...
                    <navigationItem key="navigationItem" title="History" id="d1d-CM-VoC">
                        <barButtonItem key="leftBarButtonItem" systemItem="action" id="qsq-9b-iFP">
                            <connections>
                                <action selector="exportWordList:" destination="PII-AL-jNA" id="FTW-0o-HeA"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Done" id="GtE-od-9Nf">
                            <connections>
                                <action selector="closeHistory:" destination="PII-AL-jNA" id="z6B-8i-aPO"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
                                                                                        </subviews>
                                                                                    </stackView>
                                                                                </subviews>
                                                                            </stackView>
                                                                        </subviews>
                                                                        <color key="backgroundColor" systemColor="tertiarySystemFillColor"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="clipboardButton" label="Clipboard Import"/>
                                                                        <gestureRecognizers/>
                                                                        <constraints>
                                                                            <constraint firstItem="Cln-Gm-qu7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Kbp-3I-DOl" secondAttribute="leading" constant="5" id="167-cR-2da"/>
                                                                            <constraint firstItem="Cln-Gm-qu7" firstAttribute="centerX" secondItem="Kbp-3I-DOl" secondAttribute="centerX" id="a1d-xx-wFQ"/>
                                                                            <constraint firstItem="Cln-Gm-qu7" firstAttribute="centerY" secondItem="Kbp-3I-DOl" secondAttribute="centerY" id="ezB-wc-eSJ"/>
                                                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Cln-Gm-qu7" secondAttribute="trailing" constant="5" id="i70-6N-hb2"/>
...
