/* Class = "UILabel"; text = "Import a list of words, one word per line. Kotoba will not check if words exist in the dictionary, but will skip words that are already present in your lookup history."; ObjectID = "15y-9S-NZ3"; */
"15y-9S-NZ3.text" = "Import a list of words, one word per line. Kotoba will not check if words exist in the dictionary, but will skip words that are already present in your lookup history.";

/* Class = "UIBarButtonItem"; title = "Done"; ObjectID = "5Cz-nw-gVp"; */
"5Cz-nw-gVp.title" = "Done";

/* Class = "UIViewController"; title = "Settings"; ObjectID = "5vB-j0-vQp"; */
"5vB-j0-vQp.title" = "Settings";

/* Class = "UILabel"; text = "iCloud Sync Enabled"; ObjectID = "ADH-HZ-c9J"; */
...
